# ai-driven-multimodal-analytics

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  RESEARCH.md  env.example  pyproject.toml  pytest.ini  requirements.txt  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security.yml  sonarcloud.yml
app/: config.py  dependencies.py  main.py
app/cache/: redis_cache.py
app/core/: audio_processor.py  pipeline.py  text_analyzer.py  vision_analyzer.py
app/mcp/: server.py  tools.py  transport.py
app/models/: schemas.py
app/routes/: audio.py  text.py  vision.py
tests/: test_audio.py  test_text.py  test_vision.py
